--- a/index.html
+++ b/index.html
@@ -5,12 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS Array Cardio One</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>
-      This is Array cardiography, You may check which by opening the JavaScript
-      console.
-    </h1>
+    <div class="array-wrap">
+      <h1 class="">
+        This is Array cardiography, You may check which by opening the
+        JavaScript console.
+      </h1>
+      <div class="arrow-container animated fadeInDown">
+        <div class="arrow-2">
+          <i class="fa fa-angle-down"></i>
+          <svg class="icon"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            strokeWidth="{1.5}"
+            stroke="currentColor"
+            className="w-6 h-6"
+          >
+            <path
+              strokeLinecap="round"
+              strokeLinejoin="round"
+              d="M19.5 13.5L12 21m0 0l-7.5-7.5M12 21V3"
+            />
+          </svg>
+        </div>
+        <div class="arrow-1 animated hinge infinite zoomIn"></div>
+      </div>
+    </div>
   </body>
   <script src="js/app.js"></script>
 </html>
