wip:problem three

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="array-wrap">
-      <h1 class="">
+      <h1 class="text">
         This is Array cardiography, You may check which by opening the
         JavaScript console.
       </h1>
